--- a/MPfm/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Objects\Folder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DropboxCoreService.cs" />
+    <Compile Include="Services\Exceptions\CloudAppNotLinkedException.cs" />
     <Compile Include="Services\Interfaces\ICloudLibraryService.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
