iOS: Updated project after changes on other platforms. Added CloudPreferencesViewController. Added new icons.

--- a/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
@@ -171,5 +171,6 @@
     <Compile Include="Network\IPAddressRangeFinder.cs" />
     <Compile Include="Network\WebClientTimeout.cs" />
     <Compile Include="XmlSerialization.cs" />
+    <Compile Include="Helpers\PathHelper.cs" />
   </ItemGroup>
 </Project>
