--- a/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Database\SQLiteGateway.cs" />
     <Compile Include="Objects\Folder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Exceptions\CloudAppNotLinkedException.cs" />
     <Compile Include="Services\DropboxCoreService.cs" />
     <Compile Include="Services\Interfaces\IDropboxService.cs" />
     <Compile Include="Services\WinRT\SyncClientService.cs" />
