WPF: Now loading/saving cloud preferences to disk. Updated Android project after changes on other platforms.

--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -127,8 +127,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Config\Models\AudioAppConfig.cs" />
+    <Compile Include="Config\Models\CloudAppConfig.cs" />
     <Compile Include="Config\AppConfigManager.cs" />
-    <Compile Include="Config\IAppConfig.cs" />
+    <Compile Include="Config\Models\ControlsAppConfig.cs" />
+    <Compile Include="Config\Models\IAppConfig.cs" />
+    <Compile Include="Config\Models\RootAppConfig.cs" />
+    <Compile Include="Config\Models\TableViewAppConfig.cs" />
+    <Compile Include="Config\Models\TableViewColumnAppConfig.cs" />
+    <Compile Include="Config\Models\WindowAppConfig.cs" />
+    <Compile Include="Config\Models\WindowsAppConfig.cs" />
+    <Compile Include="Messages\CloudConnectStatusChangedMessage.cs" />
     <Compile Include="Messages\ConnectionStatusChangedMessage.cs" />
     <Compile Include="Messages\ApplicationCloseMessage.cs" />
     <Compile Include="Messages\ActivateLockScreenMessage.cs" />
@@ -136,12 +145,18 @@
     <Compile Include="Messages\PlaylistListUpdatedMessage.cs" />
     <Compile Include="Messages\PlayerSetPositionMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserItemClickedMessage.cs" />
+    <Compile Include="Models\CloudConnectEntity.cs" />
+    <Compile Include="Models\CloudPreferencesStateEntity.cs" />
     <Compile Include="Models\FolderEntity.cs" />
     <Compile Include="Models\PlaylistEntity.cs" />
     <Compile Include="Navigation\MobileNavigationManager.cs" />
     <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\AddPlaylistPresenter.cs" />
     <Compile Include="Presenters\AddMarkerPresenter.cs" />
+    <Compile Include="Presenters\CloudConnectPresenter.cs" />
+    <Compile Include="Presenters\CloudPreferencesPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ICloudConnectPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ICloudPreferencesPresenter.cs" />
     <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
     <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IResumePlaybackPresenter.cs" />
@@ -169,6 +184,8 @@
     <Compile Include="Presenters\Interfaces\IAudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
+    <Compile Include="Views\ICloudConnectView.cs" />
+    <Compile Include="Views\ICloudPreferencesView.cs" />
     <Compile Include="Views\IResumePlaybackView.cs" />
     <Compile Include="Views\ISyncConnectManualView.cs" />
     <Compile Include="Views\ISyncCloudView.cs" />
@@ -204,15 +221,8 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
-    <Compile Include="Config\RootAppConfig.cs" />
     <Compile Include="Config\Providers\XmlAppConfigProvider.cs" />
     <Compile Include="Config\Providers\IAppConfigProvider.cs" />
-    <Compile Include="Config\AudioAppConfig.cs" />
-    <Compile Include="Config\ControlsAppConfig.cs" />
-    <Compile Include="Config\TableViewAppConfig.cs" />
-    <Compile Include="Config\TableViewColumnAppConfig.cs" />
-    <Compile Include="Config\WindowAppConfig.cs" />
-    <Compile Include="Config\WindowsAppConfig.cs" />
     <Compile Include="Services\PlayerService.cs" />
     <Compile Include="Services\Interfaces\IPlayerService.cs" />
     <Compile Include="Views\IPreferencesView.cs" />
