--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -81,6 +81,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Classes\Windows\StartResumePlaybackWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Classes\Windows\SyncCloudWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -148,6 +152,9 @@
     <Compile Include="Classes\Navigation\WindowsNavigationManager.cs" />
     <Compile Include="Classes\Specifications\WindowsSyncDeviceSpecifications.cs" />
     <Compile Include="Classes\Windows\Base\BaseWindow.cs" />
+    <Compile Include="Classes\Windows\StartResumePlaybackWindow.xaml.cs">
+      <DependentUpon>StartResumePlaybackWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Windows\SyncCloudWindow.xaml.cs">
       <DependentUpon>SyncCloudWindow.xaml</DependentUpon>
     </Compile>
