Android: Now using MobileNavigationManager to create a new SplashActivity (instead of fragment) to initialize the app properly and resume directly to the PlayerView. However, these changes have broken the MainActivity tabs.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Classes\Activities\BaseActivity.cs" />
     <Compile Include="Classes\Activities\AboutActivity.cs" />
+    <Compile Include="Classes\Activities\SplashActivity.cs" />
     <Compile Include="Classes\Activities\FirstRunActivity.cs" />
     <Compile Include="Classes\Activities\LaunchActivity.cs" />
     <Compile Include="Classes\Activities\ResumePlaybackActivity.cs" />
