Android: Added new logic in MobileNavigationManager to automatically resume from local or cloud device, or in certain cases show a dialog to the user to select from which device to resume from. IStartResumePlaybackView is also completely implemented.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -322,6 +322,9 @@
     <AndroidResource Include="Resources\layout\FirstRun.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\StartResumePlayback.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
