iOS: Now loading album art in StartResumePlayback. Fixed bug where EqualizerPresetDetails failed to load. Many other bug fixes in MobileNavigationManager.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -363,5 +363,6 @@
     <Compile Include="Presenters\Interfaces\IMobileMainPresenter.cs" />
     <Compile Include="Messages\MobileLibraryBrowserChangeQueryMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
+    <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
   </ItemGroup>
 </Project>
